--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hanghae",
   "version": "1.0.0",
-  "description": "",
+  "description": "항해99 주특기 2주차 과제",
   "main": "app.js",
   "scripts": {
     "start": "node app",
@@ -20,11 +20,13 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "router": "^1.3.8"
   },
   "devDependencies": {
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
-  }
+  },
+  "keywords": []
 }
